# sashimono

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dev-setup.sh  prereq.sh  ws.sh
bootstrap-contract/: .gitignore  bootstrap_contract.cpp  bootstrap_contract.hpp  bootstrap_upgrade.sh  hotpocket_contract.h  script.sh
dependencies/: .gitignore  contract_template.tar  dns_evernode.sh  docker-install.sh  governance.sh  hp.cfg  hpfs  hpfs_systemd.sh  hpws  licence.txt  sashimono-install.sh  sashimono-uninstall.sh  user-cgcreate.sh  user-cgroup-manager.sh  user-install.sh  user-uninstall.sh
dependencies/default_contract/cfg/: hp.cfg  tlscert.pem  tlskey.pem
dependencies/default_contract/contract_fs/seed/state/: appbill  appbill.table  echo_contract.js  hp-contract-lib.js  package.json
examples/client/: .gitignore  client.js  package-lock.json  package.json
examples/client/lib/: hp-client-lib.js
examples/crawler/: app.js  contract-instance-manager.js  package-lock.json  package.json
examples/crawler/contract/: contract.config  echo_contract.js  package-lock.json  package.json
examples/message-board/: .gitignore  message-board.js  package-lock.json  package.json  tlscert.pem  tlskey.pem
examples/sample-user-wallet/: .gitignore  package-lock.json  package.json  user-wallet.js
governance-helper/: index.js  package-lock.json  package.json
host-setup/: evernode-host.sh
installer/: docker-install.sh  docker-registry-install.sh  docker-registry-uninstall.sh  install.sh  launch.sh  prereq.sh  registry-install.sh  registry-uninstall.sh  sashimono-install.sh  sashimono-uninstall.sh  setup-test.sh  setup.sh  uninstall.sh  user-install.sh  user-uninstall.sh
installer/cloud/: install.sh  setup.sh  uninstall.sh  upload.sh
installer/jshelper/: index.js  package-lock.json  package.json
installer/setup-js/: index.js  package-lock.json  package.json
installer/setupfiles/: run-dockerd.sh  sashimono-docker.service
mb-xrpl/: .gitignore  app.js  mb-xrpl.js  mb-xrpl.json  package-lock.json  package.json  ripple-handler.js  sqlite-handler.js  xrp-account.js
mb-xrpl/lib/: appenv.js  config-helper.js  governance-manager.js  message-board.js  ripple-handler.js  sashi-cli.js  setup.js  sqlite-handler.js  util-helper.js  utility.js
reputationd/: .gitignore  app.js  package-lock.json  package.json
reputationd/lib/: appenv.js  cli-handler.js  config-helper.js  contract-instance-manager.js  lobby-manager.js  reputationd.js  setup.js  util-helper.js
sashi-cli/: cli-manager.cpp  cli-manager.hpp  main.cpp  pchheader.hpp  version.hpp
src/: conf.cpp  conf.hpp  crypto.cpp  crypto.hpp  hp_manager.cpp  hp_manager.hpp  hpfs_manager.cpp  hpfs_manager.hpp  main.cpp  pchheader.hpp  salog.cpp  salog.hpp  sqlite.cpp  sqlite.hpp  version.cpp  version.hpp
src/comm/: comm_handler.cpp  comm_handler.hpp  comm_session.cpp  comm_session.hpp  hpws.hpp
src/killswitch/: CMakeLists.txt  killswitch.c  killswitch.h  readme.txt
src/msg/: msg_common.hpp  msg_parser.cpp  msg_parser.hpp
src/msg/json/: msg_json.cpp  msg_json.hpp
src/util/: util.cpp  util.hpp
test/: vmsetup.sh
test/docker/: Dockerfile.ubt.20.04  Dockerfile.ubt.20.04-njs  Dockerfile.ubt.24.04  Dockerfile.ubt.24.04-njs  build-24.sh  build.sh  push.sh
test/evernode-cluster/: .gitignore  config-manager.js  contract-instance-manager.js  evernode-manager.js  evernode-service.js  index.js  logger.js  package-lock.json  package.json  path-manager.js  summary.js
test/vm-cluster/: .gitignore  cluster.sh  evcluster.js  package-lock.json  package.json  ripple-wrapper.js
